# acoustic-calibrator-terminal

./: .gitignore  CMakeLists.txt  main.cpp
.qtcreator/: CMakeLists.txt.user.3dadce3
com_port_driver/: com_port_driver.cpp  com_port_driver.h
infowindow/: infotext.h  infowindow.cpp  infowindow.h
mainwindow/: main_window_labels.h  mainwindow.cpp  mainwindow.h
